--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -114,3 +114,44 @@
     flex-direction: column;
   }
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--white);
+
+  input {
+    margin-top: 10px;
+    width: 40%;
+    height: 8%;
+    border-radius: 8px;
+    border-color: var(--gray-900);
+    border-width: 0.5px;
+    font-size: 22px;
+    padding-left: 10px
+  }
+
+  button {
+    margin-top: 20px;
+    width: 60%;
+    height: 30px;
+    background-color: black;
+    border-radius: 5px;
+    color: #eaeaea;
+    border: none;
+  }
+
+  p {
+    margin-top: 20px;
+    cursor: pointer;
+    text-decoration: underline;
+    color: var(--gray-900);
+  }
+
+  table, th, td {
+    border: 1px solid black;
+  }
+}
